# LoggerExercises-main

./: .gitignore  README.md  pyproject.toml  result.xml
LogExperiment/source/: TestingSeq.py  conftest.py  device.py  devicemanager.py  logger.py  report.html  report.xls  result.xml
