[project]
name = "LogExperiment"
description="Experiments for the Python Logging Module usage and other logger methods"
requires-python=">3.7"
dynamic=['version',]
dependencies=["pytest"]

[build-system]
requires=[
    "setuptools >= 58.0",
    "cython >= 0.29.0",
]

[project.optional-dependencies]
dev=["virtualenv","black","pytest"]